[package]
name = "lorawan-pilot"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true
opt-level = "z"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lorawan = { version = "0.1.0", path = "../lucasgranberg/lorawan", features = [
    "defmt",
    "serde",
] }

embassy-sync = { version = "0.4.0", features = ["defmt"] }
embassy-executor = { version = "0.3.0", features = [
    "defmt",
    "integrated-timers",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "nightly",
] }
embassy-time = { version = "0.2.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "time-driver-any",
    "memory-x",
    "unstable-pac",
    "exti",
    "stm32wl55jc-cm4",
] }


embassy-embedded-hal = { version = "0.1.0" }


embassy-hal-internal = { version = "0.1.0", default-features = false }
embedded-hal-async = "1.0.0-rc.3"
embedded-hal = "=1.0.0-rc.3"


embedded-storage = { version = "0.3.0", default-features = false }

defmt = "0.3.4"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-reset = { version = "0.1.1" }
futures = { version = "0.3.25", default-features = false, features = [
    "async-await",
] }
heapless = { version = "0.7.16", default-features = false }
rand_core = { version = "0.6.2", default-features = false }
lora-phy = { path = "../lucasgranberg/lora-rs/lora-phy", default-features = false }
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
postcard = "1.0.4"

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "73c85f5981f2348691e713b6f630a9d4465d1344" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "73c85f5981f2348691e713b6f630a9d4465d1344" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "73c85f5981f2348691e713b6f630a9d4465d1344" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "73c85f5981f2348691e713b6f630a9d4465d1344" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "73c85f5981f2348691e713b6f630a9d4465d1344" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "73c85f5981f2348691e713b6f630a9d4465d1344" }
embassy-hal-internal = { git = "https://github.com/embassy-rs/embassy.git", rev = "73c85f5981f2348691e713b6f630a9d4465d1344" }
